--- a/wasm/Makefile
+++ b/wasm/Makefile
@@ -3,5 +3,5 @@ BINARY='baby-groot.wasm'
 all: build
 
 build:
-	#GOOS=js GOARCH=wasm CGO_ENABLED=1 go build -o ${BINARY} -ldflags "-s -w" ./cmd/bg
-	GOOS=js GOARCH=wasm go build -o ${BINARY} ./cmd/bg
+	npm run build --prefix  assets/js/
+	GOOS=js GOARCH=wasm CGO_ENABLED=1 go build -o ${BINARY} -ldflags "-s -w" ./cmd/bg
