adding processing updates, making progress display better, updating makefile

--- a/wasm/Makefile
+++ b/wasm/Makefile
@@ -5,3 +5,8 @@ all: build
 build:
 	npm run build --prefix  assets/js/
 	GOOS=js GOARCH=wasm CGO_ENABLED=1 go build -o ${BINARY} -ldflags "-s -w" ./cmd/bg
+
+test:
+	npm run build --prefix  assets/js/
+	GOOS=js GOARCH=wasm CGO_ENABLED=1 go build -o ${BINARY} -ldflags "-s -w" ./cmd/bg
+	go run dev-server.go
